kubernetes/infrastructure/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    gateway.homelab/access: public
